--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
     text-decoration: double;
     text-align: center;
-    margin-bottom: -20px;
+    margin-bottom: -30px;
 }
 
 #header1 {
@@ -37,7 +37,7 @@ body {
   text-align: center;
   margin-left: 2rem;
   margin-right: 2rem;
-  margin-bottom: -60px;
+  margin-bottom: -40px;
 }
 
 #pr {
@@ -118,6 +118,7 @@ h3 {
   height: 800px;
   max-width: 100%;
   max-height: 100%;
+  border-radius: 40%;
 }
 
 .footer {
