--- a/src/style.css
+++ b/src/style.css
@@ -118,7 +118,23 @@ h3 {
   height: 800px;
   max-width: 100%;
   max-height: 100%;
-  border-radius: 50%;
+  border-radius: 20%;
+}
+
+
+.button {
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0056b3;
 }
 
 .footer {
