--- a/src/style.css
+++ b/src/style.css
@@ -29,9 +29,9 @@ body {
   align-items: center;
   text-decoration: double;
   text-align: center;
-  margin-bottom: -60px;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-bottom: -8vw;
+  margin-left: 4vw;
+  margin-right: 4vw;
 }
 
 #header2 {
@@ -40,54 +40,54 @@ body {
   align-items: center;
   text-decoration: double;
   text-align: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-bottom: -40px;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  margin-bottom: -4vw;
 }
 
 #pr {
   color: rgb(7, 132, 143);
-  font-size: 2.7rem;
-  margin-right: 0.3rem;
+  font-size: 6vw;
+  margin-right: 1.5vw;
 }
 
 #sc {
   color: rgb(23, 143, 7);
-  font-size: 2rem;
-  margin-right: 0.3rem;
+  font-size: 5vw;
+  margin-right: 1vw;
 }
 
 #tr {
   color: rgb(179, 7, 10);
-  font-size: 2.7rem;
-  margin-right: 0.3rem;
+  font-size: 6vw;
+  margin-right: 1.5vw;
 }
 
 #qt {
   color: rgb(5, 32, 106);
-  font-size: 2rem;
-  margin-right: 0.3rem;
+  font-size: 5vw;
+  margin-right: 1.5vw;
 
 }
 
 #qto {
   color: rgb(245, 229, 8);
-  font-size: 2.7rem;
-  margin-right: 0.3rem;
+  font-size: 6vw;
+  margin-right: 1.5vw;
 
 }
 
 #sx {
   color: rgb(227, 7, 7);
-  font-size: 2rem;
-  margin-right: 0.3rem;
+  font-size: 5vw;
+  margin-right: 1.5vw;
 
 }
 
 #st {
   color: rgb(5, 32, 106);
-  font-size: 2.7rem;
-  margin-right: 0.3rem;
+  font-size: 6vw;
+  margin-right: 1.5vw;
 
 }
 
